--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Hong Kong is a very dynamic and vibrant city. “The City That Never Sleeps” is a well-known nickname for it. Inside those shimmering skyscrapers beneath the breathtaking skyline, are diligent people working around the clock. After all, it is what it takes to survive in the most expensive city in the world.\n",
     "\n",
-    "In life, there has to be some give and take. When people are so devoted to work, they simply have no time to exercise. A study carried out by CUHK showed one-third of Hong Kong people never do exercises because they have no time for exercises. Furthermore, about one-third responded that there were not enough public sports facilities.\n",
+    "In life, there has to be some give and take. When people are so devoted to work, they simply have no time to exercise. A study carried out by CUHK showed one-third of Hong Kong people never do exercises because they have no time for it. Furthermore, about one-third responded that there were not enough public sports facilities.\n",
     "\n",
     "To solve this modern healthcare crisis, effective means are necessary to help people get rid of their detrimental habits and transit to an active lifestyle. When you are living in a city lacking sports facilities and have so little time to spare, a gym at a convenient location that provides premium service could be a paradise for you.\n",
     "\n",
